--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
